# ros2_stm32_ws

./: .gitignore  frames_2026-03-17_17.46.02.gv
ASR-PRO语音模块资料/: RGB灯带.hd
ASR-PRO语音模块资料/ASR-PRO语音模块资料/: ASR-PRO开发板使用说明书.docx
ASR-PRO语音模块资料/ASR-PRO语音模块资料/语音控制音量（范围1-7）/语音控制音量/: 语音控制音量.hd
ASR-PRO语音模块资料/灯带接线+例程+替换音频教程/: ASR PRO替换自定义语音教程.doc  RGB灯带测试程序（电脑天问软件才能打开）.hd
install/: local_setup.sh  setup.sh
install/asr_bridge/lib/asr_bridge/: asr_bridge
install/asr_bridge/share/asr_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/asr_bridge/share/asr_bridge/config/: commands.yaml
install/asr_bridge/share/asr_bridge/launch/: asr_bridge.launch.py
install/imu_tf_broadcaster/lib/imu_tf_broadcaster/: imu_tf_broadcaster
install/imu_tf_broadcaster/share/imu_tf_broadcaster/: package.dsv  package.ps1  package.sh
install/serial/share/serial/: package.sh
install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
install/sllidar_ros2/share/sllidar_ros2/: package.sh
install/sllidar_ros2/share/sllidar_ros2/launch/: sllidar_s2_launch.py
install/stm32_nav_bringup/share/ament_index/resource_index/package_run_dependencies/: stm32_nav_bringup
install/stm32_nav_bringup/share/ament_index/resource_index/parent_prefix_path/: stm32_nav_bringup
install/stm32_nav_bringup/share/stm32_nav_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/stm32_nav_bringup/share/stm32_nav_bringup/cmake/: stm32_nav_bringupConfig.cmake
install/stm32_nav_bringup/share/stm32_nav_bringup/config/: imu_h30.yaml  sllidar_s2.yaml  stm32_comm.yaml
install/stm32_nav_bringup/share/stm32_nav_bringup/launch/: nav_launch.py
install/stm32_nav_bringup/share/stm32_nav_bringup/rviz/: slam.rviz
install/stm32_nav_comm/include/stm32_nav_comm/: stm32_comm_node.h
install/stm32_nav_comm/lib/stm32_nav_comm/: stm32_comm_node
install/stm32_nav_comm/share/ament_index/resource_index/package_run_dependencies/: stm32_nav_comm
install/stm32_nav_comm/share/stm32_nav_comm/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/stm32_nav_comm/share/stm32_nav_comm/cmake/: stm32_nav_commConfig.cmake
install/voice_bridge/lib/voice_bridge/: voice_bridge
install/voice_bridge/share/voice_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/voice_module/lib/voice_module/: voice_module
install/voice_module/share/voice_module/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/yesense_interface/include/yesense_interface/yesense_interface/msg/detail/: euler_only__struct.hpp  gnss_pos__struct.hpp  imu_data_ten_axis__struct.hpp  nav_min_utc__struct.hpp  nav_status__struct.hpp  pos_only__struct.hpp  pressure__struct.hpp  sensor_temp__struct.hpp  three_axis__struct.hpp  vel__struct.hpp
install/yesense_interface/share/yesense_interface/: package.ps1  package.sh
install/yesense_std_ros2/lib/yesense_std_ros2/: yesense_node_publisher
install/yesense_std_ros2/share/yesense_std_ros2/: package.ps1  package.sh
log/: latest_build
src/asr_bridge/: setup.cfg  setup.py
src/asr_bridge/config/: commands.yaml
src/asr_bridge/firmware/: asrpro_nav.hd  烧录说明.md
src/asr_bridge/launch/: asr_bridge.launch.py
src/asr_bridge/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/install/: local_setup.sh  setup.sh
src/install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
src/install/sllidar_ros2/share/sllidar_ros2/: local_setup.sh  package.sh
src/install/stm32_nav_comm/share/stm32_nav_comm/: package.bash  package.zsh
src/stm32_nav_bringup/: CMakeLists.txt  package.xml
src/stm32_nav_bringup/config/: nav2_params.yaml  slam_toolbox_params.yaml
src/stm32_nav_bringup/launch/: sensors.launch.py  slam_launch.py
src/stm32_nav_comm/: CMakeLists.txt  package.xml  read_stm32_data.py
src/stm32_nav_comm/launch/: stm32_comm.launch.py
src/stm32_nav_comm/src/: stm32_comm_node.cpp
src/voice_bridge/: package.xml  setup.py
src/voice_module/: package.xml  setup.cfg  setup.py
src/voice_module/test/: test_pep257.py
src/voice_module/voice_module/: voice_module_node.py
src/yesense_ros2/yesense_std_ros2/config/: yesense_config.yaml
src/yesense_ros2/yesense_std_ros2/src/: yesense_node.cpp
