<?xml version="1.0"?>
<package format="3">
  <name>stm32_nav_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for STM32 omni robot with SLLidar S2 and Yesense IMU</description>

  <maintainer email="ros@ros.org">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>

  <exec_depend>stm32_nav_comm</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>yesense_std_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
