<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_module</name>
  <version>0.0.0</version>
  <description>Voice interaction module (ROS2 wrapper for SenseVoice + Qwen2-VL)</description>
  <maintainer email="nianan_0311@qq.com">qiu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>

  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-pygame</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-webrtcvad</exec_depend>
  <exec_depend>python3-pyttsx3</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-transformers</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
